# hesim

./: CMakeLists.txt  DD Generator Fitting 0.08MeV.ipynb  Janis.cc  README.md  Untitled.ipynb
.ipynb_checkpoints/: DD Generator Fitting 0.08MeV-checkpoint.ipynb
Dimension/: BC501A _Organic_scintillator_module.ipt  BC501A _Organic_scintillator_module.stp  Drawing_of_the_cryo_stat_not_the_right_version.bak  Drawing_of_the_cryo_stat_not_the_right_version.dwg  Drawing_of_the_cryo_stat_not_the_right_version.dwl  Drawing_of_the_cryo_stat_not_the_right_version.dwl2  Drawing_of_the_cryo_stat_not_the_right_version.dxf  Screws to mount the different vacuum cans.xlsx  Whole_detector_setup_no_high_voltage_cable.stp
Janis/: CMakeLists.txt  GNUmakefile  Janis.cc  JanisTest.mac  JanisTest3.mac  janis_savio_test3.sh  job_submission.py  job_submission_utils.py  localtest_modified.mac  localtest_moved.mac  localtest_original.mac  savio10million.mac  source_check.C
Janis-build/: CMakeCache.txt  G4History.macro  Janis  Janis.root  JanisTest.mac  JanisTest.out  Makefile  cmake_install.cmake  default_output_filename.root  janis_savio_test1.sh  myfilename1.root  myfilename2.root  source_check.C  testrun.root  testrun3.root  testrun4.root
Janis/Janis-build/: CMakeCache.txt  G4History.macro  Janis  Janis.in  Makefile  cmake_install.cmake
Janis/analysis/: gamma_analysis.C  neutron_analysis copy 4.C  neutron_analysis.C  neutron_analysis_1.C  neutron_analysis_2.C  neutron_analysis_3.C  neutron_analysis_4.C  neutron_analysis_5.C  process_track.cpp  source_check.C
Janis/include/: JanisActionInitialization.hh  JanisAnalysis.hh  JanisDDGeneratorAction.hh  JanisDDGeneratorMessenger.hh  JanisDetectorConstruction.hh  JanisDetectorConstructionMessenger.hh  JanisEventAction.hh  JanisPrimaryGeneratorAction.hh  JanisRunAction.hh  JanisRunActionMessenger.hh  JanisSteppingAction.hh  JanisTrackingAction.hh  StepInfo.hh
Janis/macros/: HardcodeTest.mac  JanisTest2.mac  compton1.mac  compton2.mac  localtest_del.mac  localtest_gamma.mac  savio100million1.mac  savio100million2.mac  savio100million3.mac  savio100million4.mac  savio100million5.mac  withfloor_compton.mac
Janis/shell/: janis_savio_test3.sh  neutron_analysis.sh  savio100million1.sh  savio100million2.sh  savio100million3.sh  savio100million4.sh  savio100million5.sh  savio10million.sh  withfloor_compton.sh  withfloor_neutron.sh
Janis/src/: JanisActionInitialization.cc  JanisDDGeneratorAction.cc  JanisDDGeneratorMessenger.cc  JanisDetectorConstruction.cc  JanisDetectorConstructionMessenger.cc  JanisEventAction.cc  JanisPrimaryGeneratorAction.cc  JanisRunAction.cc  JanisRunActionMessenger.cc  JanisSteppingAction.cc  JanisTrackingAction.cc  StepInfo.cc
Results/: by0107.root  saviotest1.root  saviotest3.root
analysis/: make_analysis.sh  process_track.cpp
include/: JanisDDGeneratorAction.hh  JanisDDGeneratorMessenger.hh  JanisDetectorConstruction.hh  JanisDetectorConstruction.hh_old  JanisDetectorConstructionMessenger.hh  JanisDetectorConstructionMessenger.hh_tmp  JanisEventAction.hh  JanisSteppingAction.hh
macros/: compton1.mac  compton2.mac  neutron1.mac  neutron2.mac  neutron_gps.mac
src/: JanisDDGeneratorAction.cc  JanisDDGeneratorMessenger.cc  JanisDetectorConstruction.cc  JanisDetectorConstruction.cc_old  JanisDetectorConstructionMessenger.cc  JanisEventAction.cc  (+4 more)
